# Weather-CLI-Rust

./: Cargo.toml  README.md
src/: main.rs
src/_struct/: Structure.rs  mod.rs
